# challenge-pwc

./: .dockerignore  .gitignore  Dockerfile  README.md  app.db  clean_db.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py  dependencies.py
app/api/routes/: __init__.py  authors.py  books.py  loans.py  users.py
app/api/v1/: __init__.py
app/core/: config.py  errors.py  logging.py  middleware.py
app/db/: init.py  session.py
app/db/init_data/: data.py
app/models/: __init__.py  author.py  base.py  book.py  loan.py  user.py
app/schemas/: __init__.py  author.py  book.py  loan.py  user.py
app/services/: __init__.py  author_service.py  base_service.py  book_service.py  loan_service.py  user_service.py
docs/: database_diagram.md  integration_diagram.md  testing_endpoints.md
